# ski-tracker-pi

./: .gitmodules  CMakeLists.txt  README.md
inc/skitracker/: GpsManager.hpp
inc/skitracker/conf/: config.hpp  defaults.hpp
inc/skitracker/config/: Configuration.hpp  Defaults.hpp
inc/skitracker/io/: SerialManager.hpp  gps_handler.hpp
src/: CMakeLists.txt  Configuration.cpp  Defaults.cpp  GpsManager.cpp  SerialManager.cpp  main.cpp  tracker.cpp
src/conf/: config.cpp  defaults.cpp
src/io/: gps_handler.cpp
